tests/negative/test_expr_dot_bad_member.orb
data Foo {
    a:i32 b:i32
};

fnc main() () {
    let f:Foo;
    . f 100;
};